Start migrating service for return response method for working with messages and other features