@@ -1,6 +1,7 @@
 package com.rfindustries.core.service.impl;
 
 import com.rf.collections.utils.CollectionUtils;
+import com.rfindustries.core.beans.ResponseMethod;
 import com.rfindustries.core.dao.BaseDao;
 import com.rfindustries.core.dto.BaseDTO;
 import com.rfindustries.core.entities.BaseEntity;
@@ -9,62 +10,84 @@ import com.rfindustries.core.service.BaseCrudService;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public abstract class BaseCrudServiceImpl<DAO extends BaseDao<ENTITY, PK>, ENTITY extends BaseEntity<PK>, PK, DTO extends BaseDTO> implements BaseCrudService<DAO, ENTITY, PK, DTO> {
 
 
     @Override
-    public List<DTO> insertAll(BaseCommonsParameters baseCommonsParameters, List<DTO> dtos) {
+    public ResponseMethod<List<DTO>> insertAll(BaseCommonsParameters baseCommonsParameters, List<DTO> dtos) {
         List<DTO> result = new ArrayList<>();
+        final ResponseMethod<List<DTO>> response = ResponseMethod.<List<DTO>>builder().data(result).build();
 
         if (CollectionUtils.isNotEmpty(dtos)) {
-            List<ENTITY> entities = dtos.stream().map(dto ->
-                    this.toEntity(baseCommonsParameters, this.actionDoBeforeInsertUpdate(baseCommonsParameters, dto, true))
+            List<ENTITY> entities = dtos.stream().map(dto -> {
+                        ResponseMethod<DTO> responseInsert = this.actionDoBeforeInsertUpdate(baseCommonsParameters, dto, true);
+                        this.mergeMessagesResponseMethod(response, responseInsert);
+                        return this.toEntity(baseCommonsParameters, responseInsert.getData());
+                    }
+
             ).toList();
 
             if (CollectionUtils.isNotEmpty(entities)) {
-                result = this.getDao().insertAll(baseCommonsParameters, entities).stream().map(entity -> this.actionDoAfterInsertUpdate(baseCommonsParameters, this.toDTO(baseCommonsParameters, entity), true)).toList();
+                result = this.getDao().insertAll(baseCommonsParameters, entities).stream().map(entity -> {
+                            ResponseMethod<DTO> responseInsert = this.actionDoAfterInsertUpdate(baseCommonsParameters, this.toDTO(baseCommonsParameters, entity), true);
+                            this.mergeMessagesResponseMethod(response, responseInsert);
+                            return responseInsert.getData();
+                        }
+                ).toList();
             }
         }
 
-        return result;
+        response.setData(result);
+        return ResponseMethod.<List<DTO>>builder().data(result).build();
     }
 
     @Override
-    public DTO insert(BaseCommonsParameters baseCommonsParameters, DTO dto) {
-        return this.insertAll(baseCommonsParameters, List.of(dto)).get(0);
+    public ResponseMethod<DTO> insert(BaseCommonsParameters baseCommonsParameters, DTO dto) {
+        ResponseMethod<List<DTO>> responseMethod = this.insertAll(baseCommonsParameters, List.of(dto));
+        return ResponseMethod.<DTO>builder().data(responseMethod.getData().get(0)).messages(responseMethod.getMessages()).build();
     }
 
     @Override
-    public DTO update(BaseCommonsParameters baseCommonsParameters, DTO dto) {
-        return this.updateAll(baseCommonsParameters, List.of(dto)).get(0);
+    public ResponseMethod<DTO> update(BaseCommonsParameters baseCommonsParameters, DTO dto) {
+        ResponseMethod<List<DTO>> responseMethod = this.updateAll(baseCommonsParameters, List.of(dto));
+        return ResponseMethod.<DTO>builder().data(responseMethod.getData().get(0)).messages(responseMethod.getMessages()).build();
     }
 
     @Override
-    public List<DTO> updateAll(BaseCommonsParameters baseCommonsParameters, List<DTO> dtos) {
+    public ResponseMethod<List<DTO>> updateAll(BaseCommonsParameters baseCommonsParameters, List<DTO> dtos) {
         List<DTO> result = new ArrayList<>();
+        final ResponseMethod<List<DTO>> response = ResponseMethod.<List<DTO>>builder().data(result).build();
 
         if (CollectionUtils.isNotEmpty(dtos)) {
-            List<ENTITY> entities = dtos.stream().map(dto ->
-                    this.toEntity(baseCommonsParameters, this.actionDoBeforeInsertUpdate(baseCommonsParameters, dto, false))
+            List<ENTITY> entities = dtos.stream().map(dto -> {
+                        ResponseMethod<DTO> responseInsert = this.actionDoBeforeInsertUpdate(baseCommonsParameters, dto, false);
+                        this.mergeMessagesResponseMethod(response, responseInsert);
+                        return this.toEntity(baseCommonsParameters, responseInsert.getData());
+                    }
+
             ).toList();
 
             if (CollectionUtils.isNotEmpty(entities)) {
-                result = this.getDao().updateAll(baseCommonsParameters, entities).stream().map(entity -> this.actionDoAfterInsertUpdate(baseCommonsParameters, this.toDTO(baseCommonsParameters, entity), false)).collect(Collectors.toList());
+                result = this.getDao().updateAll(baseCommonsParameters, entities).stream().map(entity -> {
+                            ResponseMethod<DTO> responseInsert = this.actionDoAfterInsertUpdate(baseCommonsParameters, this.toDTO(baseCommonsParameters, entity), false);
+                            this.mergeMessagesResponseMethod(response, responseInsert);
+                            return responseInsert.getData();
+                        }
+                ).toList();
             }
         }
 
-
-        return result;
+        response.setData(result);
+        return response;
     }
 
     @Override
-    public boolean delete(BaseCommonsParameters baseCommonsParameters, DTO dto) {
-        dto = this.actionDoBeforeDelete(baseCommonsParameters, dto);
-        this.getDao().delete(this.toEntity(baseCommonsParameters, dto));
-        this.actionDoAfterDelete(baseCommonsParameters, dto);
-        return true;
+    public ResponseMethod<Boolean> delete(BaseCommonsParameters baseCommonsParameters, DTO dto) {
+        ResponseMethod<DTO> responseMethod = this.actionDoBeforeDelete(baseCommonsParameters, dto);
+        this.getDao().delete(this.toEntity(baseCommonsParameters, responseMethod.getData()));
+        this.actionDoAfterDelete(baseCommonsParameters, responseMethod.getData());
+        return ResponseMethod.<Boolean>builder().data(true).build();
     }
 
     @Override
@@ -73,17 +96,17 @@ public abstract class BaseCrudServiceImpl<DAO extends BaseDao<ENTITY, PK>, ENTIT
     }
 
     @Override
-    public DTO goRead(BaseCommonsParameters baseCommonsParameters, PK pk) {
-        return this.findById(baseCommonsParameters, pk);
+    public ResponseMethod<DTO> goRead(BaseCommonsParameters baseCommonsParameters, PK pk) {
+        return ResponseMethod.<DTO>builder().data(this.findById(baseCommonsParameters, pk)).build();
     }
 
     @Override
-    public DTO goAdd(BaseCommonsParameters baseCommonsParameters) {
-        return this.instanceDTO();
+    public ResponseMethod<DTO> goAdd(BaseCommonsParameters baseCommonsParameters) {
+        return ResponseMethod.<DTO>builder().data(this.instanceDTO()).build();
     }
 
     @Override
-    public DTO goEdit(BaseCommonsParameters baseCommonsParameters, PK pk) {
-        return this.findById(baseCommonsParameters, pk);
+    public ResponseMethod<DTO> goEdit(BaseCommonsParameters baseCommonsParameters, PK pk) {
+        return ResponseMethod.<DTO>builder().data(this.findById(baseCommonsParameters, pk)).build();
     }
 }
